Update remote and onboarding lokalise keys
Why:
----
Some of the onboarding flow lokalise keys are not in use and not nested
under the onboarding key. As a consequence of a malfunctioning of the
push script, some keys are left orphan on the lokalise project.

This Commit:
----
- Moved onboarding translations
- Run i18n:extract
- Run i18n:pull after cleaning up unused keys

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -19,9 +19,7 @@
   "label": {
     "launch_enable_notif": "فعل الإشعارات",
     "launch_get_started": "ابدأ",
-    "launch_next": "التالى",
-    "launch_screen1_header": "طريق العودة إلى الوضع الطبيعي يبدأ من هنا",
-    "launch_set_up_phone_bluetooth": "تم"
+    "launch_screen1_header": "طريق العودة إلى الوضع الطبيعي يبدأ من هنا"
   },
   "screen_titles": {
     "about": "نبذة عنا",
