--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -1,5 +1,5 @@
 {
-  "_display_name": "Αγγλικά",
+  "_display_name": "Ελληνικά",
   "about": {
     "operating_system_abbr": "ΛΣ:",
     "version": "Έκδοση:"
@@ -117,7 +117,6 @@
   },
   "home": {
     "bluetooth": {
-      "all_services_on_header": "PathCheck",
       "all_services_on_subheader": "Οι ειδοποιήσεις έκθεσης είναι ενεργοποιημένες",
       "tracing_off_button": "Να επιτρέπονται οι ειδοποιήσεις έκθεσης",
       "tracing_off_header": "Οι ειδοποιήσεις έκθεσης απενεργοποιήθηκαν",
@@ -129,51 +128,18 @@
   "label": {
     "about_para": "Η εφαρμογή PathCheck διατίθεται από το Ίδρυμα PathCheck, έναν μη κερδοσκοπικό οργανισμό που δεσμεύεται να παρέχει δωρεάν λογισμικό για να σταματήσει η εξάπλωση του COVID-19 και να προστατεύσει το απόρρητο των ατόμων. \n\n Για περισσότερες πληροφορίες, επισκεφθείτε:",
     "assessment_icon": "Εικονίδιο ντοσιέ με σημάδι επιλογής στο εσωτερικό",
-    "bell_icon": "Εικονίδιο κουδουνιού",
-    "bluetooth_icon": "Αναζήτηση εικονιδίου συσκευής Bluetooth",
     "calendar_icon": "Εικονίδιο ημερολογίου",
     "check": "Σημάδι ελέγχου",
-    "checkbox": "Πλαίσιο ελέγχου",
     "checked_checkbox": "Επιλεγμένο πλαίσιο",
-    "close": "Κλείσιμο",
     "description_optional": "Περιγραφή (Προαιρετικό)",
     "email_optional": "Email (απαιτείται)",
-    "exposure_icon": "Εικονίδιο κύκλου με οκτώ τελείες που το περιβάλλουν",
-    "heart_icon": "Εικονίδιο καρδιάς με σταυρό στο εσωτερικό",
     "home_icon": "Εικονίδιο αρχικής σελίδας",
     "language_icon": "Εικονίδιο με περίγραμμα μιας υδρογείου σφαίρας",
-    "launch_disable_exposure_notif": "Μην ενεργοποιήσετε",
-    "launch_enable_exposure_notif": "Ενεργοποίηση",
     "launch_enable_notif": "Ενεργοποίηση Ειδοποίησης",
-    "launch_exposure_notif_header": "Ενεργοποίηση Ειδοποιήσεων Έκθεσης",
-    "launch_exposure_notif_subheader": "Για να λαμβάνετε ειδοποιήσεις σχετικά με ενημερώσεις στο ιστορικό έκθεσής σας, το τηλέφωνό σας χρειάζεται άδεια για ανταλλαγή ανώνυμου τυχαίου αναγνωριστικού Bluetooth με άλλες συσκευές.\n\nΟι ειδοποιήσεις έκθεσης λειτουργούν μόνο με άλλες συσκευές με ενεργοποιημένη τη ρύθμιση.\n\nΜπορείτε να απενεργοποιήσετε αυτές τις ειδοποιήσεις ανά πάσα στιγμή.",
     "launch_get_started": "Ξεκινήστε",
-    "launch_next": "Επόμενο",
     "launch_screen1_header": "Καλώς ήρθατε στο PathCheck",
-    "launch_screen2_header_bluetooth": "Το τηλέφωνό σας θυμάται άλλες συσκευές που συναντά, αλλά δεν θα σας αναγνωρίσει σε άλλα άτομα.",
-    "launch_screen2_subheader_bluetooth": "Τα κοντινά τηλέφωνα χρησιμοποιούν Bluetooth για κοινή χρήση και αποθήκευση συμβολοσειρών τυχαίων αριθμών για ανάκληση συσκευών σε κοντινή απόσταση.\n\nΕάν ένα άτομο αναφέρει θετική διάγνωση, τα πρόσφατα τυχαία αναγνωριστικά του τηλεφώνου του επισημαίνονται για να ειδοποιούν ανώνυμα τους άλλους. Δεν κοινοποιούνται τοποθεσίες ή προσωπικές πληροφορίες.",
-    "launch_screen3_header_bluetooth": "Λάβετε ειδοποιήσεις όταν κάποιος που συναντήσατε επιλέξει εκ των υστέρων να αναφέρει θετική διάγνωσή του.",
-    "launch_screen3_subheader_bluetooth": "Μάθετε λεπτομέρειες σχετικά με τη συνάντηση, όπως την ημερομηνία, τη διάρκεια και την ισχύ του σήματος Bluetooth.",
-    "launch_screen4_header_bluetooth": "Εάν διαγνωστήκατε θετικά με τον ιό COVID-19, μπορείτε να επιλέξετε να κοινοποιήσετε τη διάγνωσή σας ανώνυμα.",
-    "launch_screen4_subheader_bluetooth": "Αυτό βοηθά τους υπόλοιπους στην κοινότητά σας να περιορίσουν τη διάδοση του ιού.",
-    "launch_set_up_phone_bluetooth": "Επόμενο",
     "legal_page_address": "\"PathCheck\nΟδός Ντέι 58\nΤαχ. Θυρίδα 441621\nΣόμερβιλ, ΤΚ 02144 \"",
     "more_icon": "Εικονίδιο τριών οριζόντιων κουκίδων",
-    "onboarding_screen_5_button": "Ξεκινήστε",
-    "onboarding_screen1_button": "Πώς δουλεύει;",
-    "onboarding_screen1_header": "Μαζί, μπορούμε να περιορίσουμε την εξάπλωση του COVID-19",
-    "onboarding_screen1_image_label": "Δύο άνθρωποι χαιρετούν ο ένας τον άλλον με χειραψία στον αέρα",
-    "onboarding_screen2_button": "Προστατεύεται το απόρρητό μου;",
-    "onboarding_screen2_header": "Το τηλέφωνό σας θυμάται άλλες συσκευές που συναντά, αλλά δεν θα σας γνωστοποιήσει σε κανέναν",
-    "onboarding_screen2_image_label": "Δύο άτομα στα τηλέφωνά τους",
-    "onboarding_screen3_button": "Τι γίνεται αν εκτεθώ;",
-    "onboarding_screen3_header": "Πληροφορίες προσωπικής ταυτοποίησης δεν θα διαρρεύσουν ποτέ από το τηλέφωνό σας",
-    "onboarding_screen3_image_label": "Ένα άτομο μπροστά από ένα κλειδωμένο τηλέφωνο",
-    "onboarding_screen4_button": "Τι γίνεται αν αρρωστήσω;",
-    "onboarding_screen4_header": "Η εφαρμογή θα σας ειδοποιήσει εάν ενδέχεται να έχετε εκτεθεί στον κοροναϊό",
-    "onboarding_screen4_image_label": "Ένα άτομο που λαμβάνει ειδοποίηση στο τηλέφωνό του",
-    "onboarding_screen5_header": "Με την εφαρμογή, μπορείτε να βοηθήσετε να σπάσει η αλυσίδα της μόλυνσης και να λάβετε βοήθεια απευθείας από τους εμπειρογνώμονες υγείας",
-    "onboarding_screen5_image_label": "Ένα άτομο που μιλάει ψηφιακά σε έναν εμπειρογνώμονα υγείας",
     "privacy_policy": "Πολιτική Απορρήτου",
     "question_icon": "Εικονίδιο ερωτηματικού",
     "unchecked_checkbox": "Μη επιλεγμένο πλαίσιο",
@@ -192,14 +158,10 @@
   },
   "onboarding": {
     "activation_header_title": "Ρύθμιση εφαρμογής",
-    "dont_enable_proximity_tracing": "Μην ενεργοποιήσετε",
-    "enable_proximity_tracing": "Ενεργοποίηση",
     "eula_agree_terms_of_use": "Συμφωνώ ότι έχω διαβάσει και αποδέχομαι τους όρους χρήσης",
-    "maybe_later": "Ίσως αργότερα",
     "notification_body1": "Θα λαμβάνετε ειδοποιήσεις όταν μπορεί να έχετε διασταυρωθεί με κάποιον που έχει διαγνωστεί θετικά με COVID-19.",
     "notification_body2": "Η εφαρμογή το κάνει αυτό χρησιμοποιώντας Bluetooth χαμηλής ενέργειας και ασφαλείς τυχαίους κωδικούς χωρίς να γνωρίζει ποιος είστε ή πού ήσασταν. Μπορείτε να το απενεργοποιήσετε οποιαδήποτε στιγμή στις ρυθμίσεις.",
     "notification_header": "Λάβετε ειδοποίηση εάν ενδέχεται να έχετε εκτεθεί",
-    "notification_subheader": "Το PathCheck συνεργάζεται με τοπικά Τμήματα Υγείας για την παρακολούθηση του ιού. Εάν βρίσκεστε στη δικαιοδοσία ενός από τους συνεργάτες μας στο Τμήμα Υγείας, μπορείτε να λαμβάνετε ειδοποιήσεις έκθεσης από το Τμήμα Υγείας σας.",
     "notification_subheader1": "Πότε θα ειδοποιηθώ;",
     "notification_subheader2": "Πώς δουλεύει;",
     "notification_subheader3": "Αυτή η εφαρμογή δεν σας προστατεύει από την λοίμωξη του COVID-19.",
@@ -210,6 +172,21 @@
     "proximity_tracing_subheader1": "Πώς λειτουργεί ο εντοπισμός εγγύτητας;",
     "proximity_tracing_subheader2": "Είναι τα δεδομένα μου ασφαλή;",
     "proximity_tracing_subheader3": "Αυτή η εφαρμογή δεν σας προστατεύει από την λοίμωξη του COVID-19.",
+    "screen_5_button": "Ξεκινήστε",
+    "screen1_button": "Πώς δουλεύει;",
+    "screen1_header": "Μαζί, μπορούμε να περιορίσουμε την εξάπλωση του COVID-19",
+    "screen1_image_label": "Δύο άνθρωποι χαιρετούν ο ένας τον άλλον με χειραψία στον αέρα",
+    "screen2_button": "Προστατεύεται το απόρρητό μου;",
+    "screen2_header": "Το τηλέφωνό σας θυμάται άλλες συσκευές που συναντά, αλλά δεν θα σας γνωστοποιήσει σε κανέναν",
+    "screen2_image_label": "Δύο άτομα στα τηλέφωνά τους",
+    "screen3_button": "Τι γίνεται αν εκτεθώ;",
+    "screen3_header": "Πληροφορίες προσωπικής ταυτοποίησης δεν θα διαρρεύσουν ποτέ από το τηλέφωνό σας",
+    "screen3_image_label": "Ένα άτομο μπροστά από ένα κλειδωμένο τηλέφωνο",
+    "screen4_button": "Τι γίνεται αν αρρωστήσω;",
+    "screen4_header": "Η εφαρμογή θα σας ειδοποιήσει εάν ενδέχεται να έχετε εκτεθεί στον κοροναϊό",
+    "screen4_image_label": "Ένα άτομο που λαμβάνει ειδοποίηση στο τηλέφωνό του",
+    "screen5_header": "Με την εφαρμογή, μπορείτε να βοηθήσετε να σπάσει η αλυσίδα της μόλυνσης και να λάβετε βοήθεια απευθείας από τους εμπειρογνώμονες υγείας",
+    "screen5_image_label": "Ένα άτομο που μιλάει ψηφιακά σε έναν εμπειρογνώμονα υγείας",
     "step_1_of_3": "Βήμα 1 από 3",
     "step_2_of_3": "Βήμα 2 από 3",
     "step_3_of_3": "Βήμα 3 από 3"
