--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,20 +32,20 @@
     "isolate_title": "Isolate Yourself",
     "next": "Next",
     "share_cta": "I understand and consent",
+    "share_cta_skip": "No thanks, I don't want to share data",
     "share_description": "Your anonymous data helps the {{authority}} analyze, track, and contain the spread of COVID-19. Your data will be aggregated that from other PathCheck users who choose to share.\n\nYour data contains your survey responses and zip code, but no additional or personally-identifying information.\n\nThe {{authority}} will retain your anonymous data for a specific period of time.",
     "share_title": "Publish anonymized data",
     "start_cta": "Start",
     "start_description": "Your information is private, anonymized, and encrypted. No data leaves your device unless you give permission.",
-    "start_title": "Answer questions about your symptoms and medical history to learn what to do next about COVID-19",
-    "share_cta_skip": "No thanks, I don't want to share data"
+    "start_title": "Answer questions about your symptoms and medical history to learn what to do next about COVID-19"
   },
   "common": {
-    "continue": "Continue",
     "close": "Close",
+    "continue": "Continue",
     "done": "Done",
     "maybe_later": "Maybe later",
-    "no_thanks": "No thanks",
     "next": "Next",
+    "no_thanks": "No thanks",
     "settings": "Open Settings",
     "skip": "Skip",
     "something_went_wrong": "Something went wrong",
@@ -128,46 +128,21 @@
   "label": {
     "about_para": "The PathCheck app is made available by the PathCheck Foundation, a non-profit organization that is committed to providing free software to help stop the spread of COVID-19 and protect the privacy of individuals. \n\nFor more information, visit:",
     "assessment_icon": "Clipboard icon with checkmark inside",
-    "bell_icon": "Bell icon",
     "calendar_icon": "Calendar icon",
     "check": "Checkmark",
-    "checkbox": "Checkbox",
     "checked_checkbox": "Checked checkbox",
-    "unchecked_checkbox": "Unchecked checkbox",
-    "close": "Close",
     "description_optional": "Description (Optional)",
     "email_optional": "Email (Optional)",
-    "exposure_icon": "Circle icon with eight dots surrounding it",
     "home_icon": "Home icon",
     "language_icon": "Outlined icon of a globe",
     "launch_enable_notif": "Enable Notifications",
     "launch_get_started": "Get Started",
-    "launch_next": "Next",
     "launch_screen1_header": "Welcome to ",
-    "launch_screen3_header_bluetooth": "Receive notifications when someone you encountered later chooses to report a positive diagnosis.",
-    "launch_screen3_subheader_bluetooth": "Learn details about the encounter, such as the date, duration, and Bluetooth signal strength.",
-    "launch_screen4_header_bluetooth": "If you test positive for the virus that causes COVID-19, you can choose to share your diagnosis anonymously.",
-    "launch_screen4_subheader_bluetooth": "This helps others in your community contain the spread of the virus.",
-    "launch_set_up_phone_bluetooth": "Next",
     "legal_page_address": "PathCheck Foundation\n58 Day Street\nBox 441621\nSomerville, MA 02144",
     "more_icon": "Icon of three horizontal dots",
-    "onboarding_screen1_header": "Together, we can contain the spread of COVID-19",
-    "onboarding_screen1_button": "How does it work?",
-    "onboarding_screen1_image_label": "Two people high fiving each other",
-    "onboarding_screen2_header": "Your phone remembers other devices it meets, but won't identify you to anyone",
-    "onboarding_screen2_button": "Is my privacy protected?",
-    "onboarding_screen2_image_label": "Two people on their phones",
-    "onboarding_screen3_header": "No personally identifiable information ever leaves your phone",
-    "onboarding_screen3_button": "What if I'm exposed?",
-    "onboarding_screen3_image_label": "A person in front of a locked phone",
-    "onboarding_screen4_header": "The app will notify you if you may have been exposed to the coronavirus",
-    "onboarding_screen4_button": "What if I get sick?",
-    "onboarding_screen4_image_label": "A person getting a notification on their phone",
-    "onboarding_screen5_header": "With the app, you can help break the chain of infection and get help direct from health experts",
-    "onboarding_screen_5_button": "Get started",
-    "onboarding_screen5_image_label": "A person talking to a health expert virtually",
     "privacy_policy": "Privacy Policy",
     "question_icon": "Question mark icon",
+    "unchecked_checkbox": "Unchecked checkbox",
     "unknown": "unknown"
   },
   "more": {
@@ -184,21 +159,34 @@
   "onboarding": {
     "activation_header_title": "App Setup",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
+    "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
+    "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
     "notification_header": "Get notified if you may have been exposed",
     "notification_subheader1": "When will I get notified?",
-    "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
     "notification_subheader2": "How does it work?",
-    "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
     "notification_subheader3": "This app does not protect you from COVID-19 infection.",
-    "dont_enable_proximity_tracing": "Don't Enable",
-    "enable_proximity_tracing": "Enable",
+    "proximity_tracing_body1": "If smartphones with the app installed are turned on, have bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
+    "proximity_tracing_body2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
+    "proximity_tracing_button": "Activate Proximity Tracing",
     "proximity_tracing_header": "Activate Proximity Tracing",
     "proximity_tracing_subheader1": "How does Proximity Tracing work?",
-    "proximity_tracing_body1": "If smartphones with the app installed are turned on, have bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_subheader2": "Is my data secure?",
-    "proximity_tracing_body2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
     "proximity_tracing_subheader3": "This app does not protect you from COVID-19 infection.",
-    "proximity_tracing_button": "Activate Proximity Tracing",
+    "screen_5_button": "Get started",
+    "screen1_button": "How does it work?",
+    "screen1_header": "Together, we can contain the spread of COVID-19",
+    "screen1_image_label": "Two people high fiving each other",
+    "screen2_button": "Is my privacy protected?",
+    "screen2_header": "Your phone remembers other devices it meets, but won't identify you to anyone",
+    "screen2_image_label": "Two people on their phones",
+    "screen3_button": "What if I'm exposed?",
+    "screen3_header": "No personally identifiable information ever leaves your phone",
+    "screen3_image_label": "A person in front of a locked phone",
+    "screen4_button": "What if I get sick?",
+    "screen4_header": "The app will notify you if you may have been exposed to the coronavirus",
+    "screen4_image_label": "A person getting a notification on their phone",
+    "screen5_header": "With the app, you can help break the chain of infection and get help direct from health experts",
+    "screen5_image_label": "A person talking to a health expert virtually",
     "step_1_of_3": "Step 1 of 3",
     "step_2_of_3": "Step 2 of 3",
     "step_3_of_3": "Step 3 of 3"
