--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -46,24 +46,10 @@
     "how_does_this_work_para": "Cuando las Notificaciones de Exposición están activadas, tu teléfono usará Bluetooth para intercambiar y guardar cadenas de carácteres aleatorias (llamados IDs aleatorios/random IDs) de aquellos teléfonos que tengan también las Notificaciones de Exposición activadas. Estas cadenas de caracteres aleatorias no te identificarán a tí personalmente con respecto a los otros usuarios y variarån muchas veces al día para proteger tu privacidad. La fecha y la duración del encuento serán grabadas así como la distancia entre los dos teléfonos. Cuando una persona reporta un diagnóstico positivo, la cadena aleatoria de caracteres o random ID de su teléfono es marcada para anónimamente notificar al resto de usuarios. No se compartirá la información sobre su localización ni ninguna información personal.",
     "why_did_i_get_an_en_para": "Recibirás una notificación de exposición cuando te hayas cruzado con una persona que más taerde haya recibido un diagnóstico confirmado o haya dado positivo en un test por COVID-19 siempre y cuando elija notificar al resto."
   },
-  "home": {
-    "bluetooth": {
-      "all_services_on_header": "PathCheck"
-    }
-  },
   "label": {
-    "launch_enable_exposure_notif": "Habilitar",
     "launch_enable_notif": "Permitir notificaciones",
     "launch_get_started": "Iniciar",
-    "launch_next": "Siguiente",
     "launch_screen1_header": "Bienvenido a PathCheck",
-    "launch_screen2_header_bluetooth": "El teléfono recuerda otros dispositivos que encuentra, pero no te identificará con otras personas.",
-    "launch_screen2_subheader_bluetooth": "La fecha y la duración del encuentro se registran junto con una estimación de cuán cerca pudieron haber estado los dos teléfonos.",
-    "launch_screen3_header_bluetooth": "Todos los datos están encriptados y almacenados de forma privada en su teléfono.",
-    "launch_screen3_subheader_bluetooth": "Su teléfono no compartirá información personal con otros usuarios de PathCheck a menos que elija informar anónimamente un diagnóstico positivo.",
-    "launch_screen4_header_bluetooth": "Reciba una notificación si el propietario de un teléfono que ha encontrado ha sido diagnosticado con COVID-19 y eligió compartir anónimamente su estado de salud.",
-    "launch_screen4_subheader_bluetooth": "En este caso, busque información de su Autoridad Sanitaria Local sobre qué hacer a continuación.",
-    "launch_set_up_phone_bluetooth": "Siguiente",
     "legal_page_address": "PathCheck Foundation\n58 Day Street \nBox 441621 \nSomerville, MA 02144",
     "privacy_policy": "Política de privacidad"
   },
@@ -73,9 +59,7 @@
     "more": "Más"
   },
   "onboarding": {
-    "enable_proximity_tracing": "Habilitar",
-    "notification_header": "¿Desea recibir notificaciones cuando pueda haberse cruzado con el virus?",
-    "notification_subheader": "Para recibir las notificaciones de exposición, es necesario estar en una zona cubierta por un socio del Departamento de Salud local.\n\nSi aún no hay un Departamento de Salud asociado local o regional en su área, notifíquelo cuando se agreguen nuevos Departamentos de Salud cerca de usted."
+    "notification_header": "¿Desea recibir notificaciones cuando pueda haberse cruzado con el virus?"
   },
   "screen_titles": {
     "about": "Acerca de",
