--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -58,7 +58,6 @@
   },
   "home": {
     "bluetooth": {
-      "all_services_on_header": "PathCheck",
       "all_services_on_subheader": "Notificación de exposición está activa",
       "tracing_off_button": "Permitir notificaciones",
       "tracing_off_header": "Notificaciones Desactivadas",
@@ -66,23 +65,13 @@
     }
   },
   "label": {
-    "launch_disable_exposure_notif": "No habilitar",
-    "launch_enable_exposure_notif": "Habilitar",
+    "checked_checkbox": "Casilla marcada",
     "launch_enable_notif": "Permitir notificaciones",
-    "launch_exposure_notif_header": "Permitir Notificación de Exposición",
-    "launch_exposure_notif_subheader": "Para recibir notificaciones sobre las actualizaciones de su historial de exposición, su teléfono necesita permiso para intercambiar ID aleatoria Bluetooth anónima con otros dispositivos. \n\n Las notificaciones de exposición solo funcionan con otros dispositivos con la configuración habilitada. \n\n Puede desactivar estas notificaciones en cualquier momento.",
     "launch_get_started": "Empezar",
-    "launch_next": "Siguiente",
     "launch_screen1_header": "Bienvenido a PathCheck",
-    "launch_screen2_header_bluetooth": "El teléfono recuerda otros dispositivos que encuentra, pero no te identificará con otras personas.",
-    "launch_screen2_subheader_bluetooth": "Los teléfonos cercanos usan Bluetooth para compartir y guardar cadenas de números aleatorios para recuperar dispositivos cercanos. \n\nSi una persona informa un diagnóstico positivo a COVID-19, las identificaciones aleatorias recientes de su teléfono se marcan para notificar anónimamente a otros. No se comparten ubicaciones ni información personal.",
-    "launch_screen3_header_bluetooth": "Recibe notificaciones cuando alguien que hayas encontrado decida más tarde informar de un diagnóstico positivo.",
-    "launch_screen3_subheader_bluetooth": "Aprende detalles sobre el encuentro, como la fecha, la duración y la intensidad de la señal de Bluetooth.",
-    "launch_screen4_header_bluetooth": "Si el test da positivo para el virus que causa el COVID-19, puede elegir compartir su diagnóstico de forma anónima.",
-    "launch_screen4_subheader_bluetooth": "Esto ayuda a otros en su comunidad a contener la propagación del virus.",
-    "launch_set_up_phone_bluetooth": "Siguiente",
     "legal_page_address": "PathCheck Foundation \n58 Day Street \nBox 441621 \nSomerville, MA 02144",
     "privacy_policy": "Política de privacidad",
+    "unchecked_checkbox": "Casilla no marcada",
     "unknown": "desconocido"
   },
   "navigation": {
@@ -92,15 +81,36 @@
     "self_assessment": "Salud"
   },
   "onboarding": {
-    "dont_enable_proximity_tracing": "No habilitar",
-    "enable_proximity_tracing": "Habilitar",
+    "notification_body2": "La aplicación funciona haciendo uso del Bluetooth de baja energía y códigos aleatorios generados de manera segura, sin saber quién eres o dónde has estado. Esto puede ser desactivado en cualquier momento.",
     "notification_header": "¿Desea recibir notificaciones cuando pueda haberse cruzado con el virus?",
-    "notification_subheader": "Para recibir las notificaciones de exposición, es necesario estar en una zona cubierta por un socio del Departamento de Salud local.\n\nSi aún no hay un Departamento de Salud asociado local o regional en su área, notifíquelo cuando se agreguen nuevos Departamentos de Salud cerca de usted."
+    "notification_subheader2": "¿Cómo funciona?",
+    "notification_subheader3": "Esta aplicación no te protege de la infección por COVID-19.",
+    "proximity_tracing_body1": "Si teléfonos que están encendidos con la aplicación instalada, Bluetooth activado y cercanos uno del otro por un período de tiempo, su dispositivo registra un encuentro.",
+    "proximity_tracing_body2": "En caso de un encuentro, sus datos e información permanecen anónimos. La aplicación no almacena ningún dato personal. Sólo se intercambian identificaciones aleatorias. Estos se borran en un plazo de 14 días.",
+    "proximity_tracing_button": "Activar seguimiento de proximidad",
+    "proximity_tracing_header": "Activar seguimiento de proximidad",
+    "proximity_tracing_subheader1": "¿Cómo funciona el seguimiento de proximidad?",
+    "proximity_tracing_subheader2": "¿Están seguros mis datos?",
+    "proximity_tracing_subheader3": "Esta aplicación no te protege de la infección por COVID-19.",
+    "screen1_button": "¿Cómo funciona?",
+    "step_1_of_3": "Paso 1 de 3",
+    "step_2_of_3": "Paso 2 de 3",
+    "step_3_of_3": "Paso 3 de 3"
+  },
+  "report_issue": {
+    "body": "Comentarios (requerido)",
+    "email": "Email (requerido)",
+    "errors": {
+      "invalid_email": "El correo electrónico parece ser inválido, por favor, compruébelo de nuevo."
+    },
+    "name": "Nombre completo",
+    "success": "Recibimos tu reporte. ¡Gracias!"
   },
   "screen_titles": {
     "about": "Acerca de",
     "exposure_history": "Historial de exposición",
-    "legal": "Legal"
+    "legal": "Legal",
+    "report_issue": "Reportar un problema"
   },
   "settings": {
     "share_test_result": "Informe de un resultado positivo de la prueba",
