--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -51,7 +51,6 @@
   },
   "home": {
     "bluetooth": {
-      "all_services_on_header": "PathCheck",
       "all_services_on_subheader": "Уведомления об опасности включены",
       "tracing_off_button": "Включить уведомления об опасности",
       "tracing_off_header": "Уведомления об опасности отключены",
@@ -60,21 +59,9 @@
   },
   "label": {
     "about_para": "Приложение PathCheck предоставляется Фондом PathCheck – некоммерческий организацией, которая стремится предоставить бесплатное ПО, чтобы помочь остановить распространение COVID-19 и защитить неприкосновенность личных данных. \n\nДля получения более подробной информации зайдите на ",
-    "launch_disable_exposure_notif": "Не включать",
-    "launch_enable_exposure_notif": "Включить",
     "launch_enable_notif": "Включить уведомления",
-    "launch_exposure_notif_header": "Включить уведомления об опасности",
-    "launch_exposure_notif_subheader": "Чтобы получать уведомления об обновлениях истории вашего нахождения в опасных зонах, вашему телефону требуется разрешение на обмен анонимным случайным идентификатором Bluetooth с другими устройствами. \n\nУведомления о нахождении в опасных зонах работают только с другими устройствами с включенной соответствующей настройкой. \n\n Вы можете отключить эти уведомления в любое время.",
     "launch_get_started": "Начать",
-    "launch_next": "Далее",
     "launch_screen1_header": "Добро пожаловать в PathCheck",
-    "launch_screen2_header_bluetooth": "Ваш телефон запоминает другие устройства, которые он встречает, но не идентифицирует вас с другими людьми.",
-    "launch_screen2_subheader_bluetooth": "Tелефоны рядом с вами используют Bluetooth для обмена и сохранения случайных числовых строк с целью вызова устройств, находящихся поблизости. \n\nЕсли человек сообщает о положительном диагнозе, последние случайные идентификаторы его телефона помечаются флажками для анонимного уведомления других. Местоположение или личная информация не передается.",
-    "launch_screen3_header_bluetooth": "Получать уведомления о том, что кто-то, с кем вы контактировали, решил впоследствии сообщить о положительном диагнозе.",
-    "launch_screen3_subheader_bluetooth": "Узнайте подробности о контакте, такие как дата, продолжительность и уровень сигнала Bluetooth.",
-    "launch_screen4_header_bluetooth": "Если ваш тест на COVID-19 оказался положительным, вы можете анонимно поделиться данными о своем диагнозе.",
-    "launch_screen4_subheader_bluetooth": "Это помогает сдерживать распространение вируса в вашем регионе.",
-    "launch_set_up_phone_bluetooth": "Готово",
     "legal_page_address": "PathCheck Foundation\n58 Day Street\nBox 441621\nSomerville, MA 02144",
     "privacy_policy": "Политика конфиденциальности",
     "unknown": "неизвестно"
@@ -85,10 +72,7 @@
     "more": "Подробнее"
   },
   "onboarding": {
-    "dont_enable_proximity_tracing": "Не включать",
-    "enable_proximity_tracing": "Включить",
-    "notification_header": "Хотите получать уведомления, если окажетесь поблизости с носителем вируса?",
-    "notification_subheader": "Чтобы получать уведомления о нахождении в опасной зоне, вам необходимо находиться в местности, охватываемой местным департамента здравоохранения, работающим с PathCheck.\n\nЕсли в вашем регионе пока нет местных или региональных отделов здравоохранения, работающих с PathCheck, включите уведомление, чтобы узнать, когда такие организации появятся поблизости."
+    "notification_header": "Хотите получать уведомления, если окажетесь поблизости с носителем вируса?"
   },
   "screen_titles": {
     "about": "О нас",
