Add ProtectPrivacy screen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -205,7 +205,8 @@
     "screen5_image_label": "A person talking to a health expert virtually",
     "step_1_of_3": "Step 1 of 3",
     "step_2_of_3": "Step 2 of 3",
-    "step_3_of_3": "Step 3 of 3"
+    "step_3_of_3": "Step 3 of 3",
+    "how_protect_privacy": "Here's how we protect your privacy"
   },
   "report_issue": {
     "body": "Feedback (required)",
