--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -201,7 +201,7 @@
     "screen1_button": "How does it work?",
     "screen1_header": "Together, we can contain the spread of COVID-19",
     "screen1_image_label": "Two people high fiving each other",
-    "screen2_button": "Is my privacy protected?",
+    "screen2_button": "How about privacy?",
     "screen2_header": "Your phone remembers other devices it meets, but won't identify you to anyone",
     "screen2_image_label": "Two people on their phones",
     "screen3_button": "What if I'm exposed?",
