Refactor handling of tab icons in MainTabNavigator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -139,7 +139,7 @@
   "label": {
     "about_para": "The PathCheck app is made available by the PathCheck Foundation, a non-profit organization that is committed to providing free software to help stop the spread of COVID-19 and protect the privacy of individuals. \n\nFor more information, visit:",
     "assessment_icon": "Clipboard icon with checkmark inside",
-    "calendar_icon": "Calendar icon",
+    "exposure_icon": "Exposure icon",
     "check": "Checkmark",
     "checked_checkbox": "Checked checkbox",
     "description_optional": "Description (Optional)",
