Hide NotificationPermissions Activation Screen on android
Why?
------
Android does not need to ask for permission to send notifications like iOS does.

This commit
------
Remove the NotificationPermissions Activation screen from the onboarding flow for android.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -212,9 +212,7 @@
     "screen4_image_label": "A person getting a notification on their phone",
     "screen5_header": "With the app, you can help break the chain of infection and get help direct from health experts",
     "screen5_image_label": "A person talking to a health expert virtually",
-    "step_1_of_3": "Step 1 of 3",
-    "step_2_of_3": "Step 2 of 3",
-    "step_3_of_3": "Step 3 of 3"
+    "step": "Step {{currentStep}} of {{totalSteps}}"
   },
   "report_issue": {
     "body": "Feedback (required)",
